--- a/css/template.css
+++ b/css/template.css
@@ -165,6 +165,7 @@ footer a {
   /*copy*/
   .copy {
     font-size: 1em;
+    padding: 0px 15px;
   }
 
   /*related*/
@@ -188,10 +189,6 @@ footer a {
     font-size:.7em;
   }
 
-  /*copy*/
-  .copy {
-    font-size: 1em;
-  }
 }
 
 /* Custom, iPhone Retina */
